# mpg-smoke-01

./: .plan  Cargo.toml  Dockerfile  PRODUCT.md  README.md
migrations/: 20260505220500_create_tasks.sql  20260505224500_create_bookmarks.sql
src/: app.rs  error.rs  main.rs
src/models/: bookmark.rs  mod.rs  request.rs  task.rs
src/routes/: bookmarks.rs  mod.rs  tasks.rs
