[package]
name = "mpg-smoke-01"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
dotenvy = "0.15.7"
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
